# Tide-island

./: .SRCINFO  BluetoothDeviceRow.qml  BluetoothExpandedLayer.qml  CMakeLists.txt  CODE_QUALITY_REVIEW.md  ConnectivityDetailPanel.qml  ControlCenterLayer.qml  DynamicIslandWindow.qml  IslandMprisController.qml  IslandRootGestureArea.qml  IslandSystemState.qml  Notifs.qml  OsdLayer.qml  OverviewWallpaperCacheController.qml  PKGBUILD  README.md  README.txt  README.zh-CN.md  SwipeCustomInfoLayer.qml  SwipeLyricsLayer.qml  SysBackend.cpp  SysBackend.h  UserConfig.qml  WorkspaceOverviewLayer.qml  install.sh  island_backend  main.cpp  shell.qml  tide-island-git-debug-r193.65ca166-1-x86_64.pkg.tar.zst  tide-island-git-debug-r94.87b7834-1-x86_64.pkg.tar.zst  tide-island-git-debug-r95.4775fba-1-x86_64.pkg.tar.zst  tide-island-launcher  tide-island.desktop  tide-island.install  tide-island.service
.github/ISSUE_TEMPLATE/: issue.md  issue.yml
.github/workflows/: release.yml
ConnectivityBackend/: CMakeLists.txt
Custom-lyrics-service/: CMakeLists.txt  LyricsProvider.cpp  LyricsProvider.h
Tide-island/: FETCH_HEAD  config  packed-refs
Tide-island-app/: ApplicationLauncherSettings.qml  CMakeLists.txt  ConfigTextField.qml  CustomPage.qml  Document.qml  FontSettings.qml  General.qml  HiddenPathDialog.qml  Interaction.qml  Main.qml  PagePanel.qml  Shortcut.qml  Theme.qml  TlpSettings.qml  Wallpaper.qml  backend.cpp  backend.hpp  main.cpp  resources.qrc  tide-island-config.desktop
Tide-island-app/tests/: shortcut_config_tests.cpp
Tide-island/objects/info/commit-graphs/: commit-graph-chain  graph-e63c96b97ecc5a0a365b846da96123b771e984f1.graph
Tide-island/objects/pack/: pack-493be2ec990a5455391d7e7c1903cc78dbdaeab9.idx  pack-493be2ec990a5455391d7e7c1903cc78dbdaeab9.rev  pack-b66ffda3922f3e70ea162f9ce8e7b528192df44f.idx  pack-b66ffda3922f3e70ea162f9ce8e7b528192df44f.rev
Tide-island/refs/heads/: main
Tide-island/refs/heads/pr/: clean-packaging
backend/: PolkitAgent.cpp  PolkitAgent.h  SysBackend.cpp  SysBackend.h  SystemServices.cpp  SystemServices.h  UserConfigBackend.cpp  UserConfigBackend.h
include/: animation.hpp  backend.hpp  config.hpp  island.hpp  log.hpp  provider.hpp  renderer.hpp  seat.hpp  text_engine.hpp  wayland.hpp
lyricsmpris/: LyricsCore.cpp  LyricsMprisApp.cpp  LyricsMprisApp.h
pkg/tide-island-git/: .BUILDINFO  .MTREE  .PKGINFO
pkg/tide-island-git-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/tide-island-git-debug/usr/lib/debug/usr/lib/qt6/qml/ConnectivityBackend/: libConnectivityBackendplugin.so.debug
pkg/tide-island-git-debug/usr/lib/debug/usr/lib/qt6/qml/IslandBackend/: libIslandBackend.so.debug  libIslandBackendplugin.so.debug
pkg/tide-island-git-debug/usr/src/debug/tide-island-git/Tide-island/: SysBackend.cpp  SysBackend.h
pkg/tide-island-git-debug/usr/src/debug/tide-island-git/Tide-island/ConnectivityBackend/: BluetoothPairingAgent.cpp  BluetoothPairingAgent.h  ConnectivityBackendPlugin.cpp  ConnectivityBackendPlugin.h  WifiController.cpp  WifiController.h
pkg/tide-island-git/usr/lib/qt6/qml/ConnectivityBackend/: qmldir
pkg/tide-island-git/usr/lib/systemd/user/: tide-island.service
pkg/tide-island-git/usr/share/applications/: tide-island.desktop
pkg/tide-island-git/usr/share/tide-island/: ClockLayer.qml  ControlCenterLayer.qml  ControlSliderCard.qml  ExpandedPlayerLayer.qml  HyprlandData.qml  NotificationLayer.qml  OsdLayer.qml  PlayerControlButton.qml  ProcessConnectivityProvider.qml  SplitIconLayer.qml  SwipeCustomInfoLayer.qml  SwipeDatePreviewLayer.qml  UserConfig.qml  WallpaperThumbnailCache.qml  WorkspaceLayer.qml  WorkspaceOverviewLayer.qml  WorkspaceOverviewWindow.qml
qml/controlcenter/: ControlCenterLayer.qml  NotificationCenterLayer.qml
qml/island/: AiTranslateBackend.qml  AiTranslateLaye.qml  AiTranslateLayer.qml  AlcoveMusicCapsule.qml  AppLauncherLayer.qml  ApplicationLauncherLayer.qml  BluetoothConnectionTracker.qml  ClipboardHistoryLayer.qml  ClockLayer.qml  ExpandedPlayerLayer.qml  FavoriteStar.qml  IslandClock.qml  IslandMprisController.qml  IslandSystemState.qml  LangSelector.qml  LockUnlockLayer.qml  NookTrayLayer.qml  NotificationHistory.qml  NotificationLayer.qml  OsdLayer.qml  PlayerControlButton.qml  PolkitAuthLayer.qml  PomodoroLayer.qml  PowerMenuLayer.qml  SplitIconLayer.qml  SwipeCavaBars.qml  SwipeCustomInfoLayer.qml  SwipeDatePreviewLayer.qml  SwipeLyricsLayer.qml  TodoLayer.qml  TranslateTab.qml  WallpaperPickerLayer.qml  WorkspaceLayer.qml
qml/workspace/: WorkspaceOverviewLayer.qml  WorkspaceOverviewWindow.qml
scripts/: install-debian-ubuntu.sh
source/: animation.cpp  backend.cpp  config.cpp  island.cpp  provider.cpp  renderer.cpp  seat.cpp  text_engine.cpp  wayland.cpp
tests/: installer_tests.sh  lyricsmpris_core_tests.cpp  user_config_backend_tests.cpp  wallpaper_apply_tests.py
tools/: tide-island-setup.cpp
